# squire

./: .gitignore  DISASS_ARM  DISASS_I386  Kconfig  LICENCE  Makefile  Makefile.am  Makefile.in  NOTES  README.MD  README.md  Tuprules.tup  aclocal.m4  arm_buildandtest.sh  buildall.sh  buildtools.sh  cleanall.sh  configure  configure.ac  configureall.sh  grub.cfg  i386_buildandtest.sh  initramfs.conf  initramfs.tar
build-default/: tup.config
envbuild/binutils/: binutils.patch
envbuild/newlib/: config_sub.diff  configure_host.diff  crt0.c  libc_sys_configure_in.diff  syscalls.c
init/: DEBUG  Makefile  linker.ld
init/src/: fsdriver_initramfs.c  fsdriver_initramfs.h  fsdrivers.c  initramfs.c  initramfs.h  main.asm  main.c  tar.asm  tar.c  tar.h  tar.inc
init/src/DDM/: ddm.c  ddm.h
init/src/VFS/: vfs.c  vfs.h
init/src/devman/: devman.c  devman.h
init/src/vfs/: vfs.c  vfs.h
kernel/: DEBUG  Kconfig  Makefile  Makefile.am  Makefile.in  Tupfile  Tuprules.tup  aclocal.m4  config.h  configure  configure.ac
kernel/include/: squire.h
kernel/src/: boot.asm  config.h.in  elf.asm  elf.inc  gdt.asm  gdt.inc  idt.asm  idt.inc  interrupts.asm  kmalloc.asm  mboot.asm  mboot.inc  panic.asm  panic.inc  pmm.asm  pmm.inc  proc.asm  proc.inc  serial.asm  serial.inc  syscall.asm  syscall.inc  timer.asm  vas.asm  vas.inc  vmm.asm
kernel/src/arch/: Tupfile
kernel/src/arch/arm/: Makefile.am  Makefile.in  archmain.c  boot.S  clocks.c  cpu.c  cpu.h  gic.c  gic.h  pmm.c  pmm.h  spinlock.S  sysclock.h  tup.inc  vas.c  vas.h
kernel/src/arch/arm/ebaz4205/: linker.ld
kernel/src/arch/arm/platform/ebaz4205/: debugprint.c  linker.ld  memory_layout.c  sysclock.c
kernel/src/arch/i386/: Makefile.am  Makefile.in  archmain.c  boot.S  clocks.c  cpu.c  cpu.h  debugprint.c  idt.c  idt.h  io.c  io.h  linker.ld  mboot.c  mboot.h  pic.c  pic.h  pmm.c  pmm.h  spinlock.S  vas.c  vas.h
kernel/src/arch/i386/pc/: linker.ld
kernel/src/arch/x86_64/: Makefile.am  Makefile.in  archmain.c  boot.S  spinlock.S
kernel/src/common/: kmalloc.c  kmalloc.h  kprintf.c  kprintf.h  main.c  sysclock.c  sysclock.h
kernel/src/common/arch/: clocks.h  debugprint.h  pmm.h  spinlock.h  vas.h
kernel/src/general/: config.h.in  elf.c  elf.h  kill.c  kill.h  kmalloc.c  kmalloc.h  kprintf.c  kprintf.h  mboot.c  mboot.h  message.c  message.h  mutex.c  mutex.h  schedule.c  schedule.h  squire.c  stdarg.h  stddef.h  stdint.h.in  string.c  string.h  syscall.c  syscall.h  syscall_debug.c  syscall_debug.h  syscall_io.c  syscall_io.h  syscall_memory.c  syscall_memory.h  syscall_message.c  syscall_message.h  syscall_misc.c  syscall_misc.h  syscall_mutex.c  syscall_mutex.h  syscall_procthread.c  syscall_procthread.h  timer.c  (+7 more)
kernel/src/general/arch/: arch.h  config.h  finalize.h  pmm.h  proc.h  putchar.h  spinlock.h  timer.h  user_io.h  user_mem.h  vas.h
kernel/src/i386/: Makefile  arch.mk  boot.S  boot.asm  config.h  debug.c  exceptions.S  finalize.c  gdt.S  gdt.asm  idt.S  idt.asm  interrupts.asm  interrupts.c  interrupts.h  interrupts.inc  io.c  isr.S  isr.asm  kmalloc.asm  linker.ld  mboot.asm  mboot.asm.bak  mbootheader.inc  messages.asm  proc.asm  proc.c  proc.h  putchar.c  serial.S  serial.inc  spinlocks.S  stdint.h  syscall.asm  timer.c  timer.h  user_io.c  user_mem.c
kernel/src/i386/memory/: pmm.c  pmm.h  vas.c  vas.h
kernel/src/i386_old/: boot.asm  config.h  elf.asm  gdt.asm  idt.asm  idt.inc  interrupts.asm  kmalloc.inc  mboot.asm  messages.inc  pmm.asm  proc.asm  proc.inc  serial.asm  timer.asm  timer.inc  vas.inc  vmm.inc
kernel/src/i386_old/memory/: pmm.c  pmm.h
kernel/src/x86_64/: arch.mk  boot.asm  config.h  mboot.asm  stdint.h
kernel/test/: Tupfile  test.c
libc/: Makefile
libc/functions/_PDCLIB/: _PDCLIB_Exit.c  _PDCLIB_allocpages.c  _PDCLIB_fileops.c  _PDCLIB_open.c  dirent.c
libc/functions/signal/: raise.c  signal.c
libc/functions/stdio/: _PDCLIB_fillbuffer.c  _PDCLIB_print.c
libc/functions/threads/: mtx_destroy.c  mtx_init.c  mtx_lock.c  mtx_timedlock.c  mtx_trylock.c  mtx_unlock.c  thrd_create.c  thrd_current.c  thrd_equal.c  thrd_exit.c  thrd_join.c  thrd_yield.c
libc/i386/: Makefile  crt1.c  crti.S
libc/include/: dirent.h  signal.h
libc/internals/: _PDCLIB_int.h  _PDCLIB_io.h  _PDCLIB_threadconfig.h
libc/platform/i386/: Makefile  crt1.c  crtn.S
libm/: Makefile
libsquire/: Makefile
libsquire/include/: squire.h  squire_crypt.h  squire_ddm.h  squire_driver.h  squire_fsdriver.h  squire_rpc.h  squire_syscall.h  squire_syscall_debug.h  squire_syscall_io.h  squire_syscall_log_.h  squire_syscall_memory.h  squire_syscall_message.h  squire_syscall_misc.h  squire_syscall_mmap_.h  squire_syscall_mutex.h  squire_syscall_mutex_.h  squire_syscall_procthread.h  squire_syscall_procthread_.h  squire_syscall_signal_.h  squire_syscall_simple_.h  squire_vfs.h
libsquire/src/: squire_crypt.c  squire_ddm.c  squire_driver.c  squire_fsdriver.c  squire_io_port_inb.c  squire_io_port_outd.c  squire_message_simple_box_receive.c  squire_message_simple_box_send.c  squire_misc_finalize.c  squire_misc_timer_add.c  squire_procthread_create_thread.c  squire_procthread_exit_process.c  squire_procthread_join.c  squire_procthread_signal.c  squire_procthread_wait.c  squire_rpc.c  squire_vfs.c
libsquire/src/i386/: exit.c  getid.c  join.c  kill.c  log.c  mmap.c  mutex.c  process.c  signal.c  simple_recv.c  simple_send.c  spinlocks.S  thread.c  wait.c
libsquire/src/syscalls/: squire_debug_log.c  squire_io_port_ind.c  squire_io_port_inw.c  (+25 more)
makefiles/: compiler.mk  drive.mk  env.mk  qemu.mk  toolchain.mk
sysroot/: .gitignore  Makefile
testbin/: LOC  Makefile  linker.ld
testbin/src/: main.asm  main.c
tools/tcc/: SQUIRE_CHANGES  i386-link.c  libtcc.c  tcc.c  tcc.h  tccelf.c
userspace/: Makefile
userspace/drivers/: Makefile
userspace/testbin/: .gitignore  Makefile
(+32 files in other folders)
